--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -4,12 +4,10 @@ WORKDIR /app
 
 COPY ./tools/ /app/
 
-RUN apk update \
-    && apk add nginx \
-    && mkdir -p /etc/ssl/private \
-    && mv /app/localhost.key /etc/ssl/private \
-    && mv /app/localhost.crt /etc/ssl/certs \
-    && mv /app/index.html /var/www/rafernan.42.fr/ \
-    && mv /app/nginx.conf /etc/nginx/http.d/default.conf
+RUN apk update && apk add nginx \
+	&& mkdir -p /etc/ssl/private \
+	&& mv ./localhost.key /etc/ssl/private \
+	&& mv ./localhost.crt /etc/ssl/certs \
+	&& mv ./nginx.conf /etc/nginx/http.d/default.conf
 
 CMD ["nginx", "-g", "daemon off;"]
