--- a/srcs/requirements/nginx/tools/nginx.conf
+++ b/srcs/requirements/nginx/tools/nginx.conf
@@ -7,12 +7,15 @@ server {
 	ssl_certificate /etc/ssl/certs/localhost.crt;
 	ssl_certificate_key /etc/ssl/private/localhost.key;
 
-	root /var/www/rafernan.42.fr/;
-	index index.html;
+	root /var/www/rafernan.42.fr;
+	index index.html index.htm index.php;
 
 	location ~ \.php$ {
-		fastcgi_pass	dc_wphp:9000;
-		fastcgi_index	index.php;
-		include			fastcgi.conf;
+		root /var/www/rafernan.42.fr/wordpress;
+		fastcgi_pass wphp:9000;
+		fastcgi_index index.php;
+		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+		fastcgi_param REQUEST_METHOD $request_method;
+		include fastcgi_params;
 	}
 }
