--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -4,8 +4,11 @@ WORKDIR /app
 
 COPY ./tools/ /app/
 
-RUN apk update && apk add nginx \
-	&& mkdir -p /etc/ssl/private \
+# installation
+RUN apk update && apk add --no-cache nginx
+
+# configuration
+RUN mkdir -p /etc/ssl/private \
 	&& mv ./localhost.key /etc/ssl/private \
 	&& mv ./localhost.crt /etc/ssl/certs \
 	&& mv ./nginx.conf /etc/nginx/http.d/default.conf
