--- a/srcs/requirements/nginx/tools/nginx.conf
+++ b/srcs/requirements/nginx/tools/nginx.conf
@@ -11,7 +11,7 @@ server {
 	index index.html index.htm index.php;
 
 	location ~ \.php$ {
-		root /var/www/rafernan.42.fr/wordpress;
+		root /var/www/rafernan.42.fr/;
 		fastcgi_pass wphp:9000;
 		fastcgi_index index.php;
 		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
