improved entrypoint scripts, added environt variables usage

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,7 +1,7 @@
-MYSQL_ROOT_PASSWORD=root
-MYSQL_DATABASE=test_db
+MYSQL_ROOT_PASSWORD=7vPF9r7Yavunzupx
+MYSQL_DATABASE=wordpress
 
-MYSQL_USER=user
+MYSQL_USER=wordpress
 MYSQL_USER_PASSWORD=6sHtLhfSf24Sf7Qm
 
 WP_USER=phineas
