--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,34 +1,19 @@
-#FROM debian:buster
-#
-#WORKDIR /app/
-#
-#COPY ./tools/ /app/
-#
-## Installation
-#RUN apt-get update -y \
-#    && apt-get install mariadb-server -y
-#
-## Configuration
-#RUN chmod +x mariadb-install.sh
-#
-#ENTRYPOINT ["/app/mariadb-install.sh"]
-#CMD ["mysqld_safe"]
-#
 FROM alpine:3.15.6
 
-WORKDIR /app
+WORKDIR /var/lib/mysql/
 
 COPY ./tools/mariadb-server.cnf /etc/my.cnf.d/
-COPY ./tools/docker-entrypoint.sh /app/
-COPY ./tools/test.sql /app/
+COPY ./tools/docker-entrypoint.sh /
 
 # installatiin
-RUN apk update && apk add --no-cache bash \
-		perl xz bzip2 openssl zstd mariadb \
+RUN apk update && apk add --no-cache \
+		openrc perl xz zstd bash mariadb \
 		mariadb-client mariadb-server-utils
 
 # config
-RUN ln -s /usr/lib/mariadb/plugin/auth_pam_tool_dir /auth_pam_tool_dir \
-	&& chmod +x /app/docker-entrypoint.sh
+RUN ln -s /usr/lib/mariadb/plugin/auth_pam_tool_dir \
+		/auth_pam_tool_dir \
+	&& mkdir -p /run/openrc/ && touch /run/openrc/softlevel \
+	&& chmod +x /docker-entrypoint.sh
 
-ENTRYPOINT "/app/docker-entrypoint.sh"
+ENTRYPOINT "/docker-entrypoint.sh"
