--- a/srcs/requirements/mariadb/tools/mariadb-server.cnf
+++ b/srcs/requirements/mariadb/tools/mariadb-server.cnf
@@ -7,10 +7,10 @@
 
 # this is only for the mysqld standalone daemon
 [mysqld]
-user=mysql
+user=root
 basedir=/usr
-pid-file=/var/run/mysqld/mysqld.pid
-socket=/var/run/mysqld/mysqld.sock
+pid-file=/run/mysqld/mysqld.pid
+socket=/run/mysqld/mysqld.sock
 port=3306
 datadir=/var/lib/mysql
 tmpdir=/tmp
