--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - "wp-files:/var/www/rafernan.42.fr/"
 
   mariadb:
+    depends_on:
+     - "nginx"
     container_name: "mdb"
     build : "/home/rafernan/containers/srcs/requirements/mariadb/"
     image : "my_mariadb:1.0"
@@ -28,6 +30,8 @@ services:
       - "wp-db:/var/lib/mysql/"
 
   wordpress:
+    depends_on:
+      - "mariadb"
     container_name: "wphp"
     build : "/home/rafernan/containers/srcs/requirements/wordpress/"
     image : "my_wordpress:1.0"
