--- a/srcs/.env
+++ b/srcs/.env
@@ -1,13 +1,13 @@
-MYSQL_ROOT_PASSWORD=7CT7Q4INUR43QEEM
+MYSQL_ROOT_PASSWORD=XXXXXXXX
 MYSQL_DATABASE=wordpress
 
-MYSQL_USER=wordpress
-MYSQL_USER_PASSWORD=AND85DI6D9UFR7AM
+MYSQL_USER=USER_NAME
+MYSQL_USER_PASSWORD=XXXXXXXX
 
-WP_USER=phineas
-WP_USER_PASSWORD=AND85DI6D9UFR7AM
-WP_USER_EMAIL=phineas@gmail.com
+WP_USER=USER_NAME
+WP_USER_PASSWORD=XXXXXXXX
+WP_USER_EMAIL=example@gmail.com
 
-WP_ADMIN=ferb
-WP_ADMIN_PASSWORD=BHGLC382PMNA2XJP
-WP_ADMIN_EMAIL=ferb@gmail.com
+WP_ADMIN=ADMIN_NAME
+WP_ADMIN_PASSWORD=XXXXXXXX
+WP_ADMIN_EMAIL=example@gmail.com
